--- a/scss/whatsbutton.scss
+++ b/scss/whatsbutton.scss
@@ -1,3 +1,4 @@
+/*! whatbutton v1.0.0 | MIT License | github.com/mavisland/whatsbutton */
 .whatsbutton {
   display: block;
   font-size: 14px;
@@ -25,6 +26,9 @@
     bottom: 0;
     right: 0;
     width: 56px;
+    animation-name: toggleButton;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
 
     &:before,
     &:after {
@@ -89,6 +93,7 @@
     height: 56px;
     line-height: 22px;
     padding: 10px;
+    user-select: none;
     width: 100%;
   }
   .wb-user-object {
@@ -104,9 +109,14 @@
     width: 100%;
   }
   .wb-user-body {
+    color: #fff !important;
     display: flex;
     flex-flow: column wrap;
     padding-left: 10px;
+  }
+  .wb-user-name,
+  .wb-user-status {
+    color: currentColor !important;
   }
   .wb-user-status {
     font-size: 12px;
@@ -120,6 +130,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    user-select: none;
   }
   .wb-message-list-item {
     background-color: #fff;
@@ -140,6 +151,9 @@
       left: -14px;
       top: 0;
     }
+    + .wb-message-list-item {
+      margin-top: 1rem;
+    }
   }
   .wb-chat-footer {
     display: flex;
@@ -155,6 +169,7 @@
     box-shadow: 0 1px 0.5px rgba(0, 0, 0, 0.13);
     flex: 1 0 auto;
     height: 38px;
+    margin: 0;
     padding: 8px 16px;
 
     &:focus {
@@ -202,7 +217,8 @@
       left: 0;
     }
   }
-  &.is-active {
+  &.is-active,
+  &.is-open {
     .wb-toggle-button {
       &:before {
         opacity: 0;
@@ -218,5 +234,18 @@
       pointer-events: all;
       transform: translateY(0);
     }
+  }
+}
+
+@keyframes toggleButton {
+  0% {
+    opacity: 0;
+    transform: rotate(90deg) scale(0.1);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(0) scale(1);
   }
 }
